// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ErrorBoundary Snapshot > displays error details in development 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center bg-gradient-to-br from-background via-background to-background/50 px-4"
  >
    <div
      class="max-w-md w-full"
    >
      <div
        class="rounded-2xl border border-destructive/50 bg-destructive/10 p-8 text-center backdrop-blur-md"
      >
        <svg
          class="lucide lucide-circle-alert mx-auto h-16 w-16 text-destructive mb-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
        <h1
          class="text-2xl font-bold text-foreground mb-2"
        >
          Oops! Something Went Wrong
        </h1>
        <p
          class="text-muted-foreground mb-4"
        >
          Test error
        </p>
        <div
          class="flex gap-3 flex-col sm:flex-row"
        >
          <button
            class="flex-1 flex items-center justify-center gap-2 rounded-lg bg-primary text-white px-4 py-3 font-bold hover:bg-primary/90 transition"
          >
            <svg
              class="lucide lucide-house h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
              />
              <path
                d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
              />
            </svg>
            Go Home
          </button>
          <button
            class="flex-1 rounded-lg border border-primary/50 text-primary px-4 py-3 font-bold hover:bg-primary/10 transition"
          >
            Reload Page
          </button>
        </div>
        <details
          class="mt-4 text-left text-xs text-muted-foreground"
        >
          <summary
            class="cursor-pointer font-mono"
          >
            Error Details
          </summary>
          <pre
            class="mt-2 overflow-auto bg-black/20 p-2 rounded"
          >
            Error: Test error
    at ErrorThrowingComponent (D:\\SplitsVilla\\frontend\\src\\test\\error-boundary-snapshot.test.tsx:7:9)
    at renderWithHooks (D:\\SplitsVilla\\frontend\\node_modules\\react-dom\\cjs\\react-dom.development.js:15486:18)
    at mountIndeterminateComponent (D:\\SplitsVilla\\frontend\\node_modules\\react-dom\\cjs\\react-dom.development.js:20103:13)
    at beginWork (D:\\SplitsVilla\\frontend\\node_modules\\react-dom\\cjs\\react-dom.development.js:21626:16)
    at beginWork$1 (D:\\SplitsVilla\\frontend\\node_modules\\react-dom\\cjs\\react-dom.development.js:27465:14)
    at performUnitOfWork (D:\\SplitsVilla\\frontend\\node_modules\\react-dom\\cjs\\react-dom.development.js:26599:12)
    at workLoopSync (D:\\SplitsVilla\\frontend\\node_modules\\react-dom\\cjs\\react-dom.development.js:26505:5)
    at renderRootSync (D:\\SplitsVilla\\frontend\\node_modules\\react-dom\\cjs\\react-dom.development.js:26473:7)
    at recoverFromConcurrentError (D:\\SplitsVilla\\frontend\\node_modules\\react-dom\\cjs\\react-dom.development.js:25889:20)
    at performConcurrentWorkOnRoot (D:\\SplitsVilla\\frontend\\node_modules\\react-dom\\cjs\\react-dom.development.js:25789:22)
          </pre>
        </details>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorBoundary Snapshot > renders children when no error occurs 1`] = `
<div>
  <div>
    Safe content here
  </div>
</div>
`;

exports[`ErrorBoundary Snapshot > renders multiple children correctly 1`] = `
<div>
  <div>
    First child
  </div>
  <div>
    Second child
  </div>
  <div>
    Third child
  </div>
</div>
`;

exports[`ErrorBoundary Snapshot > renders nested components correctly 1`] = `
<div>
  <div
    class="container"
  >
    <header>
      <h1>
        Test App
      </h1>
    </header>
    <main>
      <div>
        Safe content here
      </div>
    </main>
  </div>
</div>
`;

exports[`ErrorBoundary Snapshot > shows error UI when child throws 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center bg-gradient-to-br from-background via-background to-background/50 px-4"
  >
    <div
      class="max-w-md w-full"
    >
      <div
        class="rounded-2xl border border-destructive/50 bg-destructive/10 p-8 text-center backdrop-blur-md"
      >
        <svg
          class="lucide lucide-circle-alert mx-auto h-16 w-16 text-destructive mb-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
        <h1
          class="text-2xl font-bold text-foreground mb-2"
        >
          Oops! Something Went Wrong
        </h1>
        <p
          class="text-muted-foreground mb-4"
        >
          Test error
        </p>
        <div
          class="flex gap-3 flex-col sm:flex-row"
        >
          <button
            class="flex-1 flex items-center justify-center gap-2 rounded-lg bg-primary text-white px-4 py-3 font-bold hover:bg-primary/90 transition"
          >
            <svg
              class="lucide lucide-house h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
              />
              <path
                d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
              />
            </svg>
            Go Home
          </button>
          <button
            class="flex-1 rounded-lg border border-primary/50 text-primary px-4 py-3 font-bold hover:bg-primary/10 transition"
          >
            Reload Page
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
